<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="sign_up"
            type="com.shuo.ba.viewmodels.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_sign_up_gd_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <TextView
            android:id="@+id/activity_sign_up_tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/create_new_user"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="@+id/activity_sign_up_gd_h1"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/sign_up_et_margin_vertical"
                android:hint="@string/user_name"
                android:paddingTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="8"
                app:helperText="@string/helper_user_name"
                app:helperTextEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={sign_up.userName}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/sign_up_et_margin_vertical"
                android:hint="@string/password"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:helperText="@string/helper_password"
                app:helperTextEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={sign_up.password}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/sign_up_et_margin_vertical"
                android:hint="@string/secure_problem"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:helperText="@string/helper_secure_problem"
                app:helperTextEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={sign_up.secureProblem}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/secure_answer"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:helperText="@string/helper_secure_answer"
                app:helperTextEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={sign_up.secureAnswer}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_headshot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_header"
                android:layout_marginTop="20dp"
                app:backgroundTint="@android:color/darker_gray"
                android:onClick="@{()->sign_up.selectHeadshot()}"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_sign_up_btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:text="@string/sign_up"
            android:onClick="@{()->sign_up.signUp()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>