<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.MainActivity">

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:src="@mipmap/background_main" />-->


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_main_gd_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <TextView
        android:id="@+id/activity_main_tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_tv_please_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_gd_v1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_welcome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_main_btn_sign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="clickBtnSignIn"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_main_gd_v1"
        app:layout_constraintWidth_percent="0.90" />

    <View
        android:id="@+id/activity_main_view_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/main_btn_margin_vertical"
        android:alpha="0.12"
        android:background="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_btn_sign" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_main_btn_sign_up"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_btn_margin_vertical"
        android:onClick="clickBtnSignUp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_view_separator"
        app:layout_constraintWidth_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>