<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="sign_in_vm"
            type="com.shuo.ba.viewmodels.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_sign_in_gd_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_sign_in_gd_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/activity_sign_in_tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/activity_sign_in_gd_h1"
            app:layout_constraintTop_toTopOf="@+id/activity_sign_in_gd_v1" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_sign_in_gd_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.54" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sign_in_et_margin_vertical"
            app:counterMaxLength="8"
            app:layout_constraintBottom_toTopOf="@+id/activity_sign_in_gd_v2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_sign_in_et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:text="@={sign_in_vm.userName}"/>
            <!-- 此处使用@={}为双向绑定, @{}为单向绑定 -->
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_in_et_margin_vertical"
            app:counterMaxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_sign_in_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text="@={sign_in_vm.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@mipmap/arrow"
            app:backgroundTint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="@dimen/fab_icon_size"
            app:tint="@android:color/white"
            android:onClick="@{()->sign_in_vm.login()}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>